--- a/src/views/addbook.ejs
+++ b/src/views/addbook.ejs
@@ -105,8 +105,14 @@
             <input  for="author" name="author" type="text"  class="form-control" id="author" placeholder="Author Name">
             <label for="auth"  id="auth"class="form-label"style="margin-left:1em;"></label>
           </div></div>
-          <div  class="col-lg-2"></div>
-          <div class="col-lg-5"><br><br>
+          <div class="col-lg-5">
+          <div class="mb-3">
+            <label for="auth"  class="form-label">Genre</label>
+            <input  for="author" name="genre" type="text"  class="form-control" id="author" placeholder="Genre">
+            <label for="auth"  id="auth"class="form-label"style="margin-left:1em;"></label>
+          </div></div>
+          
+          <div class="col-lg-5">
           <div class="mb-3">
             <label for="cov" class="form-label" >Book Cover</label>
             <input class="form-control"  name="image" id="cover" type="file" id="formFile">
@@ -179,81 +185,81 @@
 
 
 
-let book = document.getElementById("book");
- let title =  document.getElementById("title");
+// let book = document.getElementById("book");
+//  let title =  document.getElementById("title");
  
-  function validate()
-     {
-     if((title.value)=="")
-     {
-         book.innerHTML = " Book Title should not be empty";
-         book.style.color="red";
-         title.style.border ="2px solid Red";
-         return false;
-     }
+//   function validate()
+//      {
+//      if((title.value)=="")
+//      {
+//          book.innerHTML = " Book Title should not be empty";
+//          book.style.color="red";
+//          title.style.border ="2px solid Red";
+//          return false;
+//      }
       
-      else
+//       else
     
-    {
+//     {
     
-        book.innerHTML = "Valid Book Name";
-         book.style.color ="green";
-         title.style.border ="2px solid green";
-         return true;
+//         book.innerHTML = "Valid Book Name";
+//          book.style.color ="green";
+//          title.style.border ="2px solid green";
+//          return true;
 
- }
-}
+//  }
+// }
 
-let auth = document.getElementById("auth");
- let author =  document.getElementById("author");
-function valid()
-     {
-       let regexp=/^([A-Za-z\.]+)?$/
-       if(author.value==""){
-      auth.style.color="red";
-      auth.innerHTML = "Field is empty";
-      author.style.border = "2px solid red";
-      return false;
-    }
-    else if(regexp.test(author.value)){
-      auth.style.color="green";
-      auth.innerHTML = "Success";
-      author.style.border = "2px solid green";
-      return true;
-    }
-    else{
-      auth.style.color="red";
-      auth.innerHTML = "Alphabet are only allowed";
-      author.style.border = "2px solid red";
-      return false;
-    }
+// let auth = document.getElementById("auth");
+//  let author =  document.getElementById("author");
+// function valid()
+//      {
+//        let regexp=/^([A-Za-z\.]+)?$/
+//        if(author.value==""){
+//       auth.style.color="red";
+//       auth.innerHTML = "Field is empty";
+//       author.style.border = "2px solid red";
+//       return false;
+//     }
+//     else if(regexp.test(author.value)){
+//       auth.style.color="green";
+//       auth.innerHTML = "Success";
+//       author.style.border = "2px solid green";
+//       return true;
+//     }
+//     else{
+//       auth.style.color="red";
+//       auth.innerHTML = "Alphabet are only allowed";
+//       author.style.border = "2px solid red";
+//       return false;
+//     }
     
-  }
+//   }
 
-  let cov = document.getElementById("cov");
- let cover =  document.getElementById("cover");
+//   let cov = document.getElementById("cov");
+//  let cover =  document.getElementById("cover");
  
-  function addbook()
-     {
-     if((cover.value)=="")
-     {
-         cov.innerHTML = " Enter a Book cover  ";
-         cov.style.color="red";
-         cover.style.border ="2px solid Red";
-         return false;
-     }
+//   function addbook()
+//      {
+//      if((cover.value)=="")
+//      {
+//          cov.innerHTML = " Enter a Book cover  ";
+//          cov.style.color="red";
+//          cover.style.border ="2px solid Red";
+//          return false;
+//      }
       
-      else
+//       else
     
-    {
+//     {
     
-        cov.innerHTML = " Book cover  Successfull";
-         cov.style.color ="green";
-         cover.style.border ="2px solid green";
-         return true;
+//         cov.innerHTML = " Book cover  Successfull";
+//          cov.style.color ="green";
+//          cover.style.border ="2px solid green";
+//          return true;
 
- }
-}
+//  }
+// }
 
   </script>
 	</body>
