--- a/src/views/author.ejs
+++ b/src/views/author.ejs
@@ -96,7 +96,7 @@
           <div class="row">    
             <br>
             <div class="col-md-2 col-sm-3 text-center">
-              <a class="story-title" href="#"><img alt="" src="/images/<%=author.img%>" style="width:100px;height:100px" class="img-circle"></a>
+              <a class="story-title" href="#"><img alt="" src="/images/<%=author.image%>" style="width:100px;height:100px" class="img-circle"></a>
             </div>
             <div class="col-md-10 col-sm-9">
               <h3><%=author.title%></h3>
@@ -106,6 +106,13 @@
                   <small style="font-family:courier,'new courier';" class="text-muted"><%=author.genre%> • 
                    </small>
                   </h4></div>
+
+                  <form action="/auth">
+                    <button type="submit" class="btn btn-primary" style="margin-left: 35em;margin-top:-.5em">Update</button>
+                  </form>
+                  <form action="/delauthors">
+                    <button type="submit" class="btn btn-primary" style="margin-left: 45em;margin-top:-3.9em">Delete</button>
+                    </form>
                 <div class="col-xs-3"></div>
               </div>
               <br><br>
