--- a/src/views/authors.ejs
+++ b/src/views/authors.ejs
@@ -96,7 +96,7 @@
           <div class="row">    
             <br>
             <div class="col-md-2 col-sm-3 text-center">
-              <a class="story-title" href="#"><img alt="" src="/images/<%=authors[i].img%>" style="width:100px;height:100px" class="img-circle"></a>
+              <a class="story-title" href="#"><img alt="" src="/images/<%=authors[i].image%>" style="width:100px;height:100px" class="img-circle"></a>
             </div>
             <div class="col-md-10 col-sm-9">
               <h3><%=authors[i].title%></h3>
@@ -104,8 +104,9 @@
                 <div class="col-xs-9">
                   <h4><span class="label label-default"><%=authors[i].works%></span></h4><h4>
                   <small style="font-family:courier,'new courier';" class="text-muted"><%=authors[i].genre%> • 
-                    <a href="/authors/<%=i%>" class="text-muted">Read More</a></small>
+                    <a href="/authors/<%=authors[i]._id%>" class="text-muted">Read More</a></small>
                   </h4></div>
+                  
                 <div class="col-xs-3"></div>
               </div>
               <br><br>
