--- a/src/views/books.ejs
+++ b/src/views/books.ejs
@@ -105,15 +105,14 @@
                   <h4><span class="label label-default"><%=books[i].author%></span></h4><h4>
                   <small style="font-family:courier,'new courier';" class="text-muted"><%=books[i].genre%> • 
                     <a href="/books/<%=books[i]._id%>" class="text-muted">Read More</a></small>
-                  </h4></div>
-                <div class="col-xs-3"></div>
+                  </h4></div><br>
+                  <div class="col-xs-3"></div>
               </div>
               <br><br>
             </div>
           </div>
           <%}%>
           <hr>
-          
           
           <!--/stories-->
           
